fix(components/Header): header with sticky and dynamic height caused overlap, changed to fixed with 70px height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,4 +29,6 @@ body {
   color: var(--text-color);
   background-color: var(--background);
   transition: color .4s ease-in-out, background .4s ease-in-out;
+  /* ´CAUSE THE HEADER COMPONENTE */
+  padding-top: 70px;
 }
